--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
+    <script type="text/javascript" src="https://polyfill.io/v3/polyfill.js?features=es5,es6&flags=gated"></script>
     <script type="text/javascript" src="js/print_elements.js"></script>
     <title>Print nodes demonstration</title>
 </head>
@@ -95,7 +96,7 @@
         </section>
     </article>
     <aside class="related">
-        <article id="firstRelated">
+        <article id="firstRelated" class="related-article">
             <h4>Related article</h4>
             <section>
                 <p>Salamanders are a group of amphibians with a lizard-like appearance, including short legs and a tail
@@ -105,7 +106,7 @@
             <p><a href="#">Read the full story</a></p>
 
         </article>
-        <article>
+        <article class="related-article">
             <h4>Related article</h4>
             <section>
                 <p>Salamanders are a group of amphibians with a lizard-like appearance, including short legs and a tail
@@ -129,6 +130,7 @@
     <button onclick="PrintElements.print(document.getElementsByClassName('main-article'));">Print main article only</button>
     <button onclick="PrintElements.print(document.getElementsByTagName('main'))">Print main article with teasers</button>
     <button onclick="PrintElements.print([document.getElementById('firstRelated')])">Print first teaser only</button>
+    <button onclick="PrintElements.print(document.getElementsByClassName('related-article'))">Print all teasers</button>
 </div>
 </body>
 </html>
